--- a/App/exportToHTML/com/example/evacina4/Acitivity_InformacoesPessoais.java.html
+++ b/App/exportToHTML/com/example/evacina4/Acitivity_InformacoesPessoais.java.html
@@ -15,7 +15,7 @@
 <font face="Arial, Helvetica" color="#000000">
 Acitivity_InformacoesPessoais.java</font>
 </center></td></tr></table>
-<pre><span class="s0">package </span><span class="s1">com.example.evacina4</span><span class="s0">;</span>
+<pre><span class="s0">package </span><span class="s1">com.example.Evacina</span><span class="s0">;</span>
 
 <span class="s0">import </span><span class="s1">androidx.appcompat.app.AppCompatActivity</span><span class="s0">;</span>
 
@@ -36,7 +36,7 @@ Acitivity_InformacoesPessoais.java</font>
 <span class="s0">import </span><span class="s1">java.util.HashMap</span><span class="s0">;</span>
 <span class="s0">import </span><span class="s1">java.util.Map</span><span class="s0">;</span>
 
-<span class="s0">import static </span><span class="s1">com.example.evacina4.regras.CPFValido.isCPF</span><span class="s0">;</span>
+<span class="s0">import static </span><span class="s1">com.example.Evacina.regras.CPFValido.isCPF</span><span class="s0">;</span>
 
 <span class="s0">public class </span><span class="s1">Acitivity_InformacoesPessoais </span><span class="s0">extends </span><span class="s1">AppCompatActivity {</span>
 
