--- a/App/exportToHTML/com/example/evacina4/regras/ui/index.html
+++ b/App/exportToHTML/com/example/evacina4/regras/ui/index.html
@@ -1,1 +1,1 @@
-<html><head><title>com.example.evacina4.regras.ui</title></head><body></body></html>
+<html><head><title>com.example.Evacina.regras.ui</title></head><body></body></html>
