--- a/App/exportToHTML/com/example/evacina4/Activity_homepage.java.html
+++ b/App/exportToHTML/com/example/evacina4/Activity_homepage.java.html
@@ -15,7 +15,7 @@
 <font face="Arial, Helvetica" color="#000000">
 Activity_homepage.java</font>
 </center></td></tr></table>
-<pre><span class="s0">package </span><span class="s1">com.example.evacina4</span><span class="s0">;</span>
+<pre><span class="s0">package </span><span class="s1">com.example.Evacina</span><span class="s0">;</span>
 
 <span class="s0">import </span><span class="s1">androidx.annotation.NonNull</span><span class="s0">;</span>
 <span class="s0">import </span><span class="s1">androidx.annotation.Nullable</span><span class="s0">;</span>
