--- a/App/exportToHTML/com/example/evacina4/regras/CPFValido.java.html
+++ b/App/exportToHTML/com/example/evacina4/regras/CPFValido.java.html
@@ -16,7 +16,7 @@
 <font face="Arial, Helvetica" color="#000000">
 CPFValido.java</font>
 </center></td></tr></table>
-<pre><span class="s0">package </span><span class="s1">com.example.evacina4.regras</span><span class="s0">;</span>
+<pre><span class="s0">package </span><span class="s1">com.example.Evacina.regras</span><span class="s0">;</span>
 
 <span class="s0">import </span><span class="s1">java.util.InputMismatchException</span><span class="s0">;</span>
 
